--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,22 +30,21 @@ jobs:
       - name: Zip artifacts for deployment
         run: |
           echo ${GITHUB_WORKSPACE}
-          cd ${GITHUB_WORKSPACE}/dist/apps/data-api/ && zip ${GITHUB_WORKSPACE}/backend-api-release.zip ./* -r
-          cd ${GITHUB_WORKSPACE}/dist/apps/cleintside-indv/ && zip ${GITHUB_WORKSPACE}/frontend-app-release.zip ./* -r
+          cd ${GITHUB_WORKSPACE}/apps/data-api/ && zip ${GITHUB_WORKSPACE}/backend-api-release.zip ./* -r
+          cd ${GITHUB_WORKSPACE}/apps/cleintside-indv/ && zip ${GITHUB_WORKSPACE}/frontend-app-release.zip ./* -r
 
       - name: Upload frontend-app artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: frontend-app
           path: frontend-app-release.zip
-          
+
       - name: Upload backend-api artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: backend-api
           path: backend-api-release.zip
-          
-          
+
   deploy-frontend-app:
     runs-on: ubuntu-latest
     needs: build
@@ -60,18 +59,17 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip frontend-app-release.zip
-        
+
       - name: Deploy to static azure web app
         id: builddeploy
         uses: Azure/static-web-apps-deploy@v1
         with:
           azure_static_web_apps_api_token: ${{ secrets.ANGULAR_PUBLISHTOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
-          action: "upload"
-          app_location: "/" # App source code path
-          api_location: "" # Api source code path - optional
-          output_location: "" # Built app content directory - optional
-
+          action: 'upload'
+          app_location: '/' # App source code path
+          api_location: '' # Api source code path - optional
+          output_location: '' # Built app content directory - optional
 
   deploy-backend-api:
     runs-on: ubuntu-latest
