--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Zip artifacts for deployment
         run: |
           echo ${GITHUB_WORKSPACE}
-          cd ${GITHUB_WORKSPACE}/apps/data-api/ && zip ${GITHUB_WORKSPACE}/backend-api-release.zip ./* -r
+          cd ${GITHUB_WORKSPACE}/apps/data-api/ && zip ${GITHUB_WORKSPACE}/data-api-release.zip ./* -r
           cd ${GITHUB_WORKSPACE}/apps/clientside-indv/ && zip ${GITHUB_WORKSPACE}/frontend-app-release.zip ./* -r
 
       - name: Upload frontend-app artifact for deployment job
@@ -39,11 +39,11 @@ jobs:
           name: frontend-app
           path: frontend-app-release.zip
 
-      - name: Upload backend-api artifact for deployment job
+      - name: Upload data-api artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
-          name: backend-api
-          path: backend-api-release.zip
+          name: data-api
+          path: data-api-release.zip
 
   deploy-frontend-app:
     runs-on: ubuntu-latest
@@ -82,10 +82,10 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: backend-api
+          name: data-api
 
       - name: Unzip artifact for deployment
-        run: unzip backend-api-release.zip
+        run: unzip data-api-release.zip
 
       - name: Install dependencies
         run: npm install
