--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy a Node.js app and an Angular app to an Azure
 
 on:
@@ -70,6 +67,7 @@ jobs:
           app_location: '/' # App source code path
           api_location: '' # Api source code path - optional
           output_location: '' # Built app content directory - optional
+          config_file_location: '/assets'
 
   deploy-backend-api:
     runs-on: ubuntu-latest
