--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,10 +64,10 @@ jobs:
           azure_static_web_apps_api_token: ${{ secrets.ANGULAR_PUBLISHTOKEN }}
           repo_token: ${{ secrets.GITHUB_TOKEN }} # Used for Github integrations (i.e. PR comments)
           action: 'upload'
-          app_location: '/apps/clientside-indv' # App source code path
+          app_location: '/apps' # App source code path
           api_location: '' # Api source code path - optional
           output_location: '' # Built app content directory - optional
-          config_file_location: 'apps/clientside-indv/src/assets/staticwebapp.config.json'
+          config_file_location: '/assets/staticwebapp.config.json'
 
   deploy-backend-api:
     runs-on: ubuntu-latest
