--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
           app_location: '/' # App source code path
           api_location: '' # Api source code path - optional
           output_location: '' # Built app content directory - optional
-          config_file_location: '/assets'
+          config_file_location: '/src/assets'
 
   deploy-backend-api:
     runs-on: ubuntu-latest
