--- a/apps/clientside-indv/project.json
+++ b/apps/clientside-indv/project.json
@@ -36,7 +36,13 @@
               "maximumError": "4kb"
             }
           ],
-          "outputHashing": "all"
+          "outputHashing": "all",
+          "fileReplacements": [
+            {
+              "replace": "libs/shared/util-env/src/lib/environment.dev.ts",
+              "with": "libs/shared/util-env/src/lib/environment.prod.ts"
+            }
+          ]
         },
         "development": {
           "buildOptimizer": false,
