--- a/libs/shared/util-env/project.json
+++ b/libs/shared/util-env/project.json
@@ -1,21 +1,21 @@
 {
   "name": "util-env",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "util-env/src",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/shared/util-env/src",
   "projectType": "library",
   "targets": {
     "lint": {
       "executor": "@nx/eslint:lint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["util-env/**/*.ts"]
+        "lintFilePatterns": ["libs/shared/util-env/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "util-env/jest.config.ts"
+        "jestConfig": "libs/shared/util-env/jest.config.ts"
       }
     }
   },
